Lecture 7 : Operators & For LoopMCQs
<1> Bitwise Output
Choose the correct output for the following code:
public static void main (String[] args) {
    int a=10,b=50;
    a++;
    --b;
    int c=a--+b--;
    System.out.print(++c);
}
Options
a)60
b)61 
c)62
d)error

Correct Answer
Solution Description
a++,a=11.   --b,b=49.    
    c=a--+b--=11+49=60  
      a=10
      b=48
      print(++c)->print(61)     

-------------------------------------------------------------------------------------------------------------------
<2>Find error
 
Which line(s) of the following code would give an error:
public static void main (String[] args) {
    int a=10,b=20;
    System.out.println(a+++--b);//line 1
    System.out.println(a--+++b);//line 2
    System.out.println(a++-++b);//line 3
    System.out.println(a+++++b);//line 4
}
Options
line 1
line 2 
line 3
line 4 

Correct Answer
line 2
line 4

Code execution

MyClass.java:5: error: unexpected type
    System.out.println(a--+++b);//line 2
                        ^
  required: variable
  found:    value
MyClass.java:7: error: unexpected type
    System.out.println(a+++++b);//line 4
                        ^
  required: variable
  found:    value
2 errors

Solution Description
As + operator and ++ operator have equal precedence.
Similarly - and -- have equal precedence.
So in line 2 +++b and in line 4 +++b gives an error.
To solve this error we can use +(++b).

-------------------------------------------------------------------------------------------------------------------
<3>Bitwise operator

Choose the correct output of the following code:
public static void main (String[] args) {
    int a=10,b=20;
    int c=a&b;
    System.out.print(c);
    int d=a|b;
    System.out.print(d);
    int e=a^b;
    System.out.print(e);
    int f=c+d+e;
    System.out.print(~f);
}
Options
03030-60
03030-61 
0303060
03030-59

Correct Answer
03030-61
Solution Description
c=10&20=0.
d=10|20=30. 
e=10^20=30.
f=0+30+30=60.
 ~f=-61.

-------------------------------------------------------------------------------------------------------------------
<4>Correct Output

Choose the correct output for the given code:
public static void main (String[] args) {
    int a=10,b=-20;
    System.out.print(a^b);
}
Options
-26 
26
35
-35

Correct Answer
-26

-------------------------------------------------------------------------------------------------------------------
<5>Bitwise Operator

What will be the output ?
public static void main(String args[])
   {
       int a = 42;
       int b = ~a; (there is tilde sign before a)
       System.out.print(a + " " + b);       
   }
Options
42 42
42 -43 
42 43
43 43

Correct Answer
42 -43

-------------------------------------------------------------------------------------------------------------------
<6>Guess the output

class Output {
    public static void main(String args[]) 
    {    
         int x , y = 1;
         x = 10;
         if (x != 10 && x / 0 == 0)
             System.out.println(y);
         else
             System.out.println(++y);
    } 
}
Options
2 
1
Runtime error because of division by zero in if condition
None of these

Correct Answer
2
Solution Description
since x = 10,if loop condition fails.
So, pointer shifts to else that prints incremented value of y by 1 i.e. 2 

-------------------------------------------------------------------------------------------------------------------
<7> Guess the output

class Solution {
    public static void main(String args[]) 
    {   
    int x = 15;
    int y = x++;
    int  z = ++x;
    System.out.println(y +" " + z);
    }
}
Options
15 16
16 17
15 17 
16 16

Correct Answer
15 17
Solution Description
x = 15
post increment y 
y = 15
then x value increments by 1, x = 16
z is pre increment: x = 17
z = 17

-------------------------------------------------------------------------------------------------------------------
<8> Guess the output

class Solution {
    public static void main(String args[]) 
    {        
         int g = 3;
         System.out.print(++g * 8);
    } 
}
Options
24
32 
Correct Answer
32
Solution Description
print: g + 1 * 8 = 4 * 8 = 32

-------------------------------------------------------------------------------------------------------------------
<9>Guess the output

class Solution {
    public static void main(String args[]) 
    {
        int x =10;
        int y = 20;
        if(x++ > 10 && ++y > 20 ){
        System.out.print("Inside if  ");
        }else{
        System.out.print("Inside else  ");
        }
        System.out.println(x +" "+y);
     }
}        
Options
Inside if 11 21
Inside if 10 21
Inside else 11 20 
Inside else 11 21

Correct Answer
Inside else 11 20 
Solution Description
if loop falis because it takes x=19 and post increments so x=11 and y stays same due to "&&", y =20


-------------------------------------------------------------------------------------------------------------------
<10>Guess the output

class Solution {
    public static void main(String args[]) 
    {
         int x = 10;
         int y = 20;
         if(x++ > 10 || ++y > 20 ){
        System.out.print("Inside if  ");
         }else{
        System.out.print("Inside else  ");
         }
         System.out.println(x  + " " + y);
    }
}        
Options
Inside if 11 21 
Inside if 10 21
Inside else 11 20
Inside else 11 21

Correct Answer
Inside if 11 21 
Solution Description
If for x fails but "||" for y passes so, incide if prints then x =11 and y = 21


-------------------------------------------------------------------------------------------------------------------
<11> Select the correct output for the following code:

public static void main (String[] args) {
    int a=5;
    a+=5+(++a)+(a++);
    System.out.print(a);
} 
Options
20
22 
17
18

Correct Answer
22
Solution Description
a=a+5+(++a)+(a++).  
=5+5+6+6=22


-------------------------------------------------------------------------------------------------------------------
<12> Guess the Output

public static void main (String] args) {
    int a=10;
    a+=++a-5/3+6*a;
    System.out.print(a);
}
Options
50
70
76
86 
Correct Answer
86
Solution Description
a+=++a-5/3+6*a.
a+=11-1+6*11.
a=10+11-1+66=86.


-------------------------------------------------------------------------------------------------------------------
<13> For Loop

How many times will the following loop run?
for(int i=1;i<10;i*=2)
{
     System.out.println(i);
} 
Options
4 
3
10
infinite
Correct Answer
4
Solution Description
The loop would run for i=1,2,4,8.


-------------------------------------------------------------------------------------------------------------------
<14> Which value(s) can be used to initialize i so that the loop is finite:
public static void main (String[] args) {
    for(int i=_;i>0;i=i%3)
    {
        System.out.print("*");
    }
}
Options
1000
729 
386
483 
Correct Answer
729
483
Solution Description
The value which is divisible by 3 would result in finite loop.

--------------------------------------------------------------------------------------------------------
<15> 

